# markstay-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: publish.yml  test.yml
conformance/spec/: diff.json  hash.json  lint.json  markers.json  mint.json  parse.json  resolve.json  score.json  seqmatch.json
src/: hash.rs  id.rs  lib.rs  lint.rs  markers.rs  parse.rs  quote.rs  ratio.rs  resolve.rs  segment.rs  sha256.rs  stamp.rs  text.rs
tests/: cli.rs  conformance.rs  unit.rs
